Sửa phần change password cho bạn

--- a/demo/src/main/resources/templates/fragments/header.html
+++ b/demo/src/main/resources/templates/fragments/header.html
@@ -1,11 +1,11 @@
 <!--<div th:fragment="header">-->
 <!--    <tr>-->
-<!--        <td style="padding: 0"><img src="https://ressmedia.com/wp-content/uploads/2021/07/ANH-1-36.jpg" alt="" style="max-width: 100%"></td>-->
+<!--        <td style="padding: 0"><img src="https://s3.ap-southeast-1.amazonaws.com/staging-storage-dfy/upload/logo-dfy.png" alt="" style="max-width: 100%"></td>-->
 <!--    </tr>-->
 <!--</div>-->
 
 <div th:fragment="header">
     <tr>
-        <td style="padding: 0"><img src="https://s3.ap-southeast-1.amazonaws.com/staging-storage-dfy/upload/logo-dfy.png" alt="" style="max-width: 100%"></td>
+        <td style="padding: 0"><img src="http://res.cloudinary.com/dj2rsasts/image/upload/v1650943824/f5slw184rhpgny0v2fto.jpg" alt="" style="max-width: 100%"></td>
     </tr>
 </div>
