--- a/demo/src/main/resources/templates/thuphanhoicontact.html
+++ b/demo/src/main/resources/templates/thuphanhoicontact.html
@@ -127,13 +127,13 @@
                 <table>
                     <thead>
                     <tr>
-                        <th colspan="2" style="text-align: left; font-size: 16px; font-weight: 600;">Details</th>
+                        <th colspan="2" style="text-align: left; font-size: 16px; font-weight: 600;">Message</th>
                     </tr>
                     </thead>
 
                     <tbody>
                     <tr>
-                        <td>Email</td>
+                        <td>Response Your Contact</td>
                         <td th:text="${message}"></td>
                     </tr>
                     </tbody>
