--- a/demo/src/main/resources/templates/fragments/footer.html
+++ b/demo/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <div th:fragment="footer" >
     <tr>
         <td>
-            <p style="margin-bottom: 0">If you have any questions or complains, please contact <a href="mailto:ask@defiforyou.uk" style="color: #2F80ED">ask@defiforyou.uk</a></p>
+            <p style="margin-bottom: 0">Thank you for your support! <a href="mailto:vuongtien2942000@gmail.com" style="color: #2F80ED">vuongtien2942000@gmail.com</a></p>
         </td>
     </tr>
 
@@ -13,11 +13,11 @@
 
     <tr>
         <td>
-            <p>Team</p>
+            <p>Love</p>
         </td>
     </tr>
 
     <tr class="defi">
-        <p>DeFi For You.<sup>TM</sup></p>
+        <p>From Admin.<sup>TM</sup></p>
     </tr>
 </div>
