--- a/demo/src/main/resources/templates/BillGen.html
+++ b/demo/src/main/resources/templates/BillGen.html
@@ -44,6 +44,7 @@
         <th>Product Name</th>
         <th>Quantity</th>
         <th>Unit Price</th>
+        <th>Size</th>
         <th>Total</th>
     </tr>
     <tr th:each="item,iterStat : ${list}">
@@ -51,6 +52,7 @@
         <td th:text="${item.productName}"></td>
         <td th:text="${item.quantity}"></td>
         <td th:text="${item.unitPrice}"></td>
+        <td th:text="${item.sizeName}"></td>
         <td th:text="${item.total}"></td>
     </tr>
 </table>
